💄Adding colors and breakpoints variables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
-
+/** Colors **/
+/** Primary color **/
+/** Hover & active **/
+/** Breakpoints **/
+/** Responsive mixins **/
 
 /*# sourceMappingURL=style.css.map */
