--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,24 @@
 /** Hover & active **/
 /** Breakpoints **/
 /** Responsive mixins **/
-header {
+.header {
   width: 100%;
   background-color: white;
   box-shadow: 0px 4px 4px grey;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
-
+.header__return {
+  color: black;
+  position: absolute;
+  left: 5%;
+}
 @media screen and (max-width: 780px) {
-  .logo-container {
+  .header__logo {
     margin: 5px 5px 5px 5px;
-    padding: 8px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
   }
 }
 
