--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,13 +1,20 @@
-header {
+.header {
     width: 100%;
     background-color: white;
     box-shadow: 0px 4px 4px grey;
-    text-align: center;
-}
-
-.logo-container {
-    @include mobile-only {
-        margin: 5px 5px 5px 5px; 
-        padding: 8px 5px 5px 5px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    &__return {
+        color: black;
+        position: absolute;
+        left: 5%;
+    }
+    &__logo {
+        @include mobile-only {
+            margin: 5px 5px 5px 5px; 
+            padding: 5px 5px 5px 5px; 
+        }
     }
 }
