--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,18 @@
 /** Colors **/
 /** Primary color **/
+/** Font color **/
 /** Hover & active **/
+/** Background color **/
 /** Breakpoints **/
 /** Responsive mixins **/
+* {
+  font-family: "Roboto";
+}
+
+h1 {
+  margin: 0;
+}
+
 .header {
   width: 100%;
   background-color: white;
@@ -11,17 +21,110 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  padding: 1.2em 0em 1.2em 0em;
 }
 .header__return {
   color: black;
   position: absolute;
   left: 5%;
 }
-@media screen and (max-width: 780px) {
-  .header__logo {
-    margin: 5px 5px 5px 5px;
-    padding: 5px 5px 5px 5px;
+
+.location-section {
+  background-color: #e5e5e5;
+  height: 3.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.location-section > i {
+  color: #383838;
+  margin-right: 1.2em;
+}
+
+.exploration-section {
+  background-color: #f6f6f6;
+  height: 12em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2em 2em 2em 2em;
+}
+.exploration-section > h1 {
+  font-size: 20px;
+}
+.exploration-section > span {
+  font-weight: 300;
+  margin: 1.2em 0em 1.2em 0em;
+}
+.exploration-section > button {
+  background-color: #9356DC;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  padding: 1em 1em 1em 1em;
+  box-shadow: 2px 2px 2px 2px grey;
+}
+.exploration-section :hover {
+  lighting-color: 50%;
+  cursor: pointer;
+}
+
+.detail-section {
+  margin: 1em 1em 1em 1em;
+}
+.detail-section__title {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin: 1em 0em 1em 0em;
+}
+.detail-section__container {
+  display: flex;
+  margin: 2em 1em 1em 2em;
+}
+@media screen and (max-width: 990px) {
+  .detail-section__container {
+    flex-direction: column;
   }
+}
+.detail-section__container-button {
+  background-color: #f6f6f6;
+  height: 4.2em;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 1px 1px black;
+  width: 100%;
+  margin: 1em 1em 1em 1em;
+}
+@media screen and (max-width: 990px) {
+  .detail-section__container-button {
+    margin: 1em 0em 1em 0em;
+  }
+}
+.detail-section__container-button-number {
+  background-color: #9356DC;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9em;
+  margin: 0em 1.7em 0em -0.5em;
+}
+.detail-section__container-button-icon {
+  color: grey;
+  margin: 0em 1.7em 0em 0em;
+}
+.detail-section__container-button-title {
+  color: black;
+}
+.detail-section__container :hover {
+  background-color: #FF79DA;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
