--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,8 +5,18 @@ $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $third-color: #99E2D0;
 
+/** Font color **/
+$primary-color-font: black;
+$secondary-color-font: #383838;
+$third-color-font: grey;
+
+
 /** Hover & active **/
 $hover-color: #99E2D0;
+
+/** Background color **/
+$background-pale: #f6f6f6;
+$background-light: #e5e5e5;
 
 
                                     /** Breakpoints **/
