💄 Adding Index UI

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,16 +7,17 @@ $third-color: #99E2D0;
 
 /** Font color **/
 $primary-color-font: black;
-$secondary-color-font: #383838;
+$secondary-color-font: #353535;
 $third-color-font: grey;
+$accent-color-font: #048968;
 
 
 /** Hover & active **/
-$hover-color: #99E2D0;
+$hover-color: #f5edff;
 
 /** Background color **/
 $background-pale: #f6f6f6;
-$background-light: #e5e5e5;
+$background-light: #eaeaea;
 
 
                                     /** Breakpoints **/
