--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,81 @@ h1 {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.restaurant-card {
+  background-color: white;
+  border-radius: 20px;
+  width: 28%;
+  box-shadow: 3px 3px 14px #d8d8d8;
+}
+@media screen and (max-width: 780px) {
+  .restaurant-card {
+    width: 80%;
+  }
+}
+.restaurant-card__image {
+  position: relative;
+}
+.restaurant-card__image > img {
+  width: 100%;
+  height: 12em;
+  object-position: center;
+  object-fit: cover;
+  border-radius: 15px 15px 0px 0px;
+}
+.restaurant-card__image > span {
+  background-color: #99E2D0;
+  color: #048968;
+  border-radius: 3px;
+  box-shadow: 1px 1px 10px #353535;
+  padding: 0.4em 1em 0.4em 1em;
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+}
+.restaurant-card__title {
+  display: flex;
+  flex-direction: column;
+  padding: 0.8em 1em 1em 1em;
+  position: relative;
+  line-height: 1.5em;
+}
+.restaurant-card__title > h3 {
+  font-size: 1.1em;
+  margin: 0;
+}
+.restaurant-card__title > span {
+  font-weight: 300;
+}
+.restaurant-card__title > i {
+  position: absolute;
+  top: 1em;
+  right: 1.5em;
+  color: grey;
+}
+.restaurant-card__title :hover::before {
+  animation: fill 1s ease-out;
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 900;
+  transition: 500ms ease-out;
+}
+
 .header {
   width: 100%;
   background-color: white;
-  box-shadow: 0px 4px 4px grey;
+  box-shadow: 0px 4px 4px #dadada;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 1.2em 0em 1.2em 0em;
+  padding: 1.5em 0em 1.2em 0em;
 }
 .header__return {
   color: black;
@@ -30,20 +96,20 @@ h1 {
 }
 
 .location-section {
-  background-color: #e5e5e5;
+  background-color: #eaeaea;
   height: 3.5em;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #353535;
 }
 .location-section > i {
-  color: #383838;
   margin-right: 1.2em;
 }
 
 .exploration-section {
   background-color: #f6f6f6;
-  height: 12em;
+  height: 14em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,58 +118,84 @@ h1 {
   padding: 2em 2em 2em 2em;
 }
 .exploration-section > h1 {
-  font-size: 20px;
+  font-size: 22px;
+}
+@media screen and (max-width: 780px) {
+  .exploration-section > h1 {
+    padding: 0em 2em 0em 2em;
+  }
 }
 .exploration-section > span {
   font-weight: 300;
+  line-height: 1.4em;
   margin: 1.2em 0em 1.2em 0em;
 }
 .exploration-section > button {
-  background-color: #9356DC;
+  background: linear-gradient(to left top, #9356DC 0%, #FF79DA 100%);
   color: white;
   border: none;
   border-radius: 30px;
-  padding: 1em 1em 1em 1em;
-  box-shadow: 2px 2px 2px 2px grey;
+  padding: 1em 1.5em 1em 1.5em;
+  box-shadow: 0px 4px 4px #dadada;
+  margin: 0.5em 0em 1em 0em;
 }
 .exploration-section :hover {
-  lighting-color: 50%;
+  opacity: 80%;
   cursor: pointer;
 }
 
 .detail-section {
-  margin: 1em 1em 1em 1em;
+  margin: 2.5em 1em 2em 1em;
+}
+@media screen and (max-width: 780px) {
+  .detail-section {
+    margin: 2.5em 0em 2.5em 0em;
+  }
 }
 .detail-section__title {
   font-size: 1.5em;
   font-weight: 700;
-  margin: 1em 0em 1em 0em;
+  margin-left: 1em;
 }
 .detail-section__container {
   display: flex;
-  margin: 2em 1em 1em 2em;
+  margin: 1.2em 1em 1em 2em;
 }
 @media screen and (max-width: 990px) {
   .detail-section__container {
     flex-direction: column;
   }
 }
-.detail-section__container-button {
+.detail-section__container > ul {
   background-color: #f6f6f6;
   height: 4.2em;
   border-radius: 20px;
   display: flex;
   align-items: center;
-  box-shadow: 1px 1px 1px black;
+  box-shadow: 0px 2px 14px #dadada;
   width: 100%;
   margin: 1em 1em 1em 1em;
 }
 @media screen and (max-width: 990px) {
-  .detail-section__container-button {
+  .detail-section__container > ul {
     margin: 1em 0em 1em 0em;
+    width: 25em;
   }
 }
-.detail-section__container-button-number {
+.detail-section__container > ul > i {
+  color: grey;
+  margin: 0em 1.7em 0em 0em;
+}
+.detail-section__container > ul > li {
+  color: black;
+  list-style: none;
+}
+.detail-section__container ul :hover {
+  cursor: pointer;
+  color: #f5edff;
+}
+
+#icon-number {
   background-color: #9356DC;
   width: 1.5em;
   height: 1.5em;
@@ -113,18 +205,25 @@ h1 {
   align-items: center;
   justify-content: center;
   font-size: 0.9em;
-  margin: 0em 1.7em 0em -0.5em;
+  margin: 0em 1.7em 0em -3.4em;
 }
-.detail-section__container-button-icon {
-  color: grey;
-  margin: 0em 1.7em 0em 0em;
+
+.restaurant {
+  background-color: #F2F2F2;
+  margin: 2.5em 1em 1em 1em;
 }
-.detail-section__container-button-title {
-  color: black;
+@media screen and (max-width: 780px) {
+  .restaurant {
+    margin: 0;
+  }
 }
-.detail-section__container :hover {
-  background-color: #FF79DA;
-  cursor: pointer;
+.restaurant > h2 {
+  margin: 1em 1em 1em 2em;
+}
+.restaurant_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
