--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,12 @@
 .header {
     width: 100%;
     background-color: white;
-    box-shadow: 0px 4px 4px grey;
+    box-shadow: 0px 4px 4px #dadada;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    padding: 1.2em 0em 1.2em 0em; 
+    padding: 1.5em 0em 1.2em 0em; 
     &__return {
         color: black;
         position: absolute;
