--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import "./base/base";
 @import "./base/typography";
 
-@import "./components/buttons";
+@import "./components/card";
 
 @import "./layout/header";
 @import "./layout/nav";
