--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -4,15 +4,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: $secondary-color-font;
     >i {
-        color: $secondary-color-font;
         margin-right: 1.2em;
     }
 }
 
 .exploration-section {
     background-color: $background-pale;
-    height: 12em;
+    height: 14em;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,74 +20,102 @@
     text-align: center;
     padding: 2em 2em 2em 2em; 
     >h1 {
-        font-size: 20px;
+        font-size: 22px;
+        @include mobile-only {
+            padding: 0em 2em 0em 2em;    
+        }
     }
     >span {
         font-weight: 300;
+        line-height: 1.4em;
         margin: 1.2em 0em 1.2em 0em;
     }
     >button {
-        background-color: $primary-color;
+        background: linear-gradient(to left top, $primary-color 0%, $secondary-color 100%);
         color: white;
         border: none;
         border-radius: 30px;
-        padding: 1em 1em 1em 1em;
-        box-shadow: 2px 2px 2px 2px grey;
+        padding: 1em 1.5em 1em 1.5em;
+        box-shadow: 0px 4px 4px #dadada;
+        margin: 0.5em 0em 1em 0em;
     }
     :hover {
-        lighting-color: 50%;
+        opacity: 80%;
         cursor: pointer;
     }
 }
 
 .detail-section {
-    margin: 1em 1em 1em 1em;
+    margin: 2.5em 1em 2em 1em;
+    @include mobile-only {
+        margin: 2.5em 0em 2.5em 0em;
+    }
     &__title {
         font-size: 1.5em;
         font-weight: 700;
-        margin: 1em 0em 1em 0em;
+        margin-left: 1em;
     }
     &__container{
         display: flex;
-        margin: 2em 1em 1em 2em;
+        margin: 1.2em 1em 1em 2em;
         @include ipad-only {
         flex-direction: column;
         }
-        &-button {
+        >ul {
             background-color: $background-pale;
             height: 4.2em;
             border-radius: 20px;
             display: flex;
             align-items: center;
-            box-shadow: 1px 1px 1px black;
+            box-shadow: 0px 2px 14px #dadada;
             width: 100%;
             margin: 1em 1em 1em 1em;
             @include ipad-only {
             margin: 1em 0em 1em 0em;
+            width: 25em;
             }
-            &-number {
-                background-color: $primary-color;
-                width: 1.5em;
-                height: 1.5em;
-                border-radius: 50%;
-                color: white;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 0.9em;
-                margin: 0em 1.7em 0em -0.5em;
-            }
-            &-icon {
+            >i {
                 color: $third-color-font;
                 margin: 0em 1.7em 0em 0em;
             }
-            &-title {
+            >li {
                 color: $primary-color-font;
+                list-style: none;
             }
         }
-        :hover {
-            background-color: $secondary-color;
+        ul :hover {
             cursor: pointer;
+            color: $hover-color;
         }
     }
-}    
+}
+
+#icon-number {
+    background-color: $primary-color;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9em;
+    margin: 0em 1.7em 0em -3.4em;
+}
+
+.restaurant {
+    background-color: #F2F2F2;
+    margin: 2.5em 1em 1em 1em;
+    @include mobile-only {
+        margin: 0;
+    }
+    >h2 {
+        margin: 1em 1em 1em 2em;
+    }
+    &_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
+    
+}
