--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,14 @@ a {
 .restaurant-card {
   background-color: white;
   border-radius: 20px;
-  width: 28%;
+  width: 48%;
   box-shadow: 3px 3px 14px #d8d8d8;
+  margin: 1em 1em 1em 1em;
 }
 @media screen and (max-width: 780px) {
   .restaurant-card {
-    width: 80%;
+    width: 100%;
+    margin: 1em 0em 1em 0em;
   }
 }
 .restaurant-card__image {
@@ -145,21 +147,23 @@ a {
 }
 
 .detail-section {
-  margin: 2.5em 1em 2em 1em;
+  margin: 3em 1em 3em 1em;
 }
 @media screen and (max-width: 780px) {
   .detail-section {
     margin: 2.5em 0em 2.5em 0em;
   }
 }
-.detail-section__title {
+.detail-section > span {
   font-size: 1.5em;
   font-weight: 700;
   margin-left: 1em;
 }
 .detail-section__container {
   display: flex;
-  margin: 1.2em 1em 1em 2em;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 1.5em 1em 1.5em;
 }
 @media screen and (max-width: 990px) {
   .detail-section__container {
@@ -178,8 +182,13 @@ a {
 }
 @media screen and (max-width: 990px) {
   .detail-section__container > ul {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 780px) {
+  .detail-section__container > ul {
     margin: 1em 0em 1em 0em;
-    width: 25em;
+    width: 90%;
   }
 }
 .detail-section__container > ul > i {
@@ -190,9 +199,13 @@ a {
   color: black;
   list-style: none;
 }
-.detail-section__container ul :hover {
+.detail-section__container :hover {
   cursor: pointer;
-  color: #f5edff;
+  color: inherit;
+  background-color: #f5edff;
+}
+.detail-section__container :hover i {
+  color: grey;
 }
 
 #icon-number {
@@ -210,7 +223,7 @@ a {
 
 .restaurant {
   background-color: #F2F2F2;
-  margin: 2.5em 1em 1em 1em;
+  padding: 2em 1em 3em 1em;
 }
 @media screen and (max-width: 780px) {
   .restaurant {
@@ -218,9 +231,11 @@ a {
   }
 }
 .restaurant > h2 {
-  margin: 1em 1em 1em 2em;
+  font-size: 1.5em;
+  margin-left: 1em;
 }
 .restaurant_container {
+  margin: 1em 1.5em 1em 1.5em;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
