--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,10 +1,12 @@
 .restaurant-card {
     background-color: white;
     border-radius: 20px;
-    width: 28%;
+    width: 48%;
     box-shadow: 3px 3px 14px #d8d8d8;
+    margin: 1em 1em 1em 1em;
     @include mobile-only {
-        width: 80%;
+        width: 100%;
+        margin: 1em 0em 1em 0em;
     }
     &__image {
         position: relative;
