--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,19 @@ a {
 .restaurant-card {
   background-color: white;
   border-radius: 20px;
-  width: 48%;
+  width: 43%;
   box-shadow: 3px 3px 14px #d8d8d8;
-  margin: 1em 1em 1em 1em;
+  margin: 1em 0em 3em 0em;
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 990px) {
+  .restaurant-card {
+    margin: 1em 0em 2em 0em;
+  }
+}
+@media screen and (max-width: 680px) {
   .restaurant-card {
     width: 100%;
-    margin: 1em 0em 1em 0em;
+    margin: 1.4em 0em 1.4em 0em;
   }
 }
 .restaurant-card__image {
@@ -36,10 +41,15 @@ a {
 }
 .restaurant-card__image > img {
   width: 100%;
-  height: 12em;
+  height: 18em;
   object-position: center;
   object-fit: cover;
   border-radius: 15px 15px 0px 0px;
+}
+@media screen and (max-width: 990px) {
+  .restaurant-card__image > img {
+    height: 12em;
+  }
 }
 .restaurant-card__image > span {
   background-color: #99E2D0;
@@ -122,7 +132,7 @@ a {
 .exploration-section > h1 {
   font-size: 22px;
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 680px) {
   .exploration-section > h1 {
     padding: 0em 2em 0em 2em;
   }
@@ -149,7 +159,7 @@ a {
 .detail-section {
   margin: 3em 1em 3em 1em;
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 680px) {
   .detail-section {
     margin: 2.5em 0em 2.5em 0em;
   }
@@ -185,7 +195,7 @@ a {
     width: 90%;
   }
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 680px) {
   .detail-section__container > ul {
     margin: 1em 0em 1em 0em;
     width: 90%;
@@ -225,7 +235,7 @@ a {
   background-color: #F2F2F2;
   padding: 2em 1em 3em 1em;
 }
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 680px) {
   .restaurant {
     margin: 0;
   }
@@ -238,7 +248,8 @@ a {
   margin: 1em 1.5em 1em 1.5em;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
