--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -126,7 +126,8 @@
     margin: 1em 1.5em 1em 1.5em;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     }
     
 }
