--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,11 @@ h1 {
 
 a {
   text-decoration: none;
-  color: black;
+  color: inherit;
+}
+
+ul li {
+  list-style: none;
 }
 
 .restaurant-card {
@@ -105,6 +109,27 @@ a {
   color: black;
   position: absolute;
   left: 5%;
+}
+
+.footer {
+  background-color: #353535;
+  color: white;
+  padding: 3em 1em 3em 1em;
+}
+.footer > ul {
+  line-height: 1.8em;
+  font-size: 1.2em;
+}
+.footer > ul > li:nth-child(1) {
+  font-family: "Shrikhand";
+  font-size: 1.5em;
+  margin: 0.6em 0em 0.6em 0em;
+}
+.footer > ul > li:nth-child(2) i {
+  margin-right: 1em;
+}
+.footer > ul > li:nth-child(3) i {
+  margin-right: 0.7em;
 }
 
 .location-section {
@@ -207,7 +232,6 @@ a {
 }
 .detail-section__container > ul > li {
   color: black;
-  list-style: none;
 }
 .detail-section__container :hover {
   cursor: pointer;
