--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,5 +8,9 @@ h1 {
 
 a {
     text-decoration: none;
-    color: $primary-color-font;
+    color: inherit;
+}
+
+ul li {
+    list-style: none;
 }
