--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,6 +18,7 @@ $hover-color: #f5edff;
 /** Background color **/
 $background-pale: #f6f6f6;
 $background-light: #eaeaea;
+$background-dark: #353535;
 
 
                                     /** Breakpoints **/
