--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ ul li {
 .restaurant-card {
   background-color: white;
   border-radius: 20px;
-  width: 43%;
+  width: 40%;
   box-shadow: 3px 3px 14px #d8d8d8;
   margin: 1em 0em 3em 0em;
 }
@@ -45,7 +45,7 @@ ul li {
 }
 .restaurant-card__image > img {
   width: 100%;
-  height: 18em;
+  height: 14em;
   object-position: center;
   object-fit: cover;
   border-radius: 15px 15px 0px 0px;
@@ -62,13 +62,13 @@ ul li {
   box-shadow: 1px 1px 10px #353535;
   padding: 0.4em 1em 0.4em 1em;
   position: absolute;
-  top: 0.5em;
-  right: 0.5em;
+  top: 0.8em;
+  right: 0.9em;
 }
 .restaurant-card__title {
   display: flex;
   flex-direction: column;
-  padding: 0.8em 1em 1em 1em;
+  padding: 0.8em 1em 1em 1.5em;
   position: relative;
   line-height: 1.5em;
 }
@@ -82,7 +82,7 @@ ul li {
 .restaurant-card__title > i {
   position: absolute;
   top: 1em;
-  right: 1.5em;
+  right: 1em;
   color: grey;
 }
 .restaurant-card__title :hover::before {
@@ -117,8 +117,20 @@ ul li {
   padding: 3em 1em 3em 1em;
 }
 .footer > ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
   line-height: 1.8em;
   font-size: 1.2em;
+  padding: 0;
+}
+@media screen and (max-width: 990px) {
+  .footer > ul {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: baseline;
+  }
 }
 .footer > ul > li:nth-child(1) {
   font-family: "Shrikhand";
@@ -152,10 +164,10 @@ ul li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 2em 2em 2em 2em;
+  padding: 1.8em 2em 1.8em 2em;
 }
 .exploration-section > h1 {
-  font-size: 22px;
+  font-size: 1.5em;
 }
 @media screen and (max-width: 680px) {
   .exploration-section > h1 {
