--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,8 +3,18 @@
     color: white;
     padding: 3em 1em 3em 1em;
     >ul {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
         line-height: 1.8em;
         font-size: 1.2em;
+        padding: 0;
+        @include ipad-only {
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: baseline;
+        }
         >li:nth-child(1) {
             font-family: "Shrikhand";
             font-size: 1.5em;
@@ -20,6 +30,5 @@
                 margin-right: 0.7em;
             }
         }
-        
     }
 }
