--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -18,9 +18,9 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 2em 2em 2em 2em; 
+    padding: 1.8em 2em 1.8em 2em; 
     >h1 {
-        font-size: 22px;
+        font-size: 1.5em;
         @include mobile-only {
             padding: 0em 2em 0em 2em;    
         }
