--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,9 +5,11 @@
 @import "./base/base";
 
 @import "./components/card";
+@import "./components/_menu-card";
 
 @import "./layout/header";
 @import "./layout/footer";
 
 
 @import "./pages/index";
+@import "./pages/enchante";
