--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     color: $secondary-color-font;
-    >i {
+    i {
         margin-right: 1.2em;
     }
 }
@@ -19,29 +19,16 @@
     align-items: center;
     text-align: center;
     padding: 1.8em 2em 1.8em 2em; 
-    >h1 {
+    h1 {
         font-size: 1.5em;
         @include mobile-only {
             padding: 0em 2em 0em 2em;    
         }
     }
-    >span {
+    span {
         font-weight: 300;
         line-height: 1.4em;
         margin: 1.2em 0em 1.2em 0em;
-    }
-    >button {
-        background: linear-gradient(to left top, $primary-color 0%, $secondary-color 100%);
-        color: white;
-        border: none;
-        border-radius: 30px;
-        padding: 1em 1.5em 1em 1.5em;
-        box-shadow: 0px 4px 4px #dadada;
-        margin: 0.5em 0em 1em 0em;
-    }
-    :hover {
-        opacity: 80%;
-        cursor: pointer;
     }
 }
 
@@ -50,7 +37,7 @@
     @include mobile-only {
         margin: 2.5em 0em 2.5em 0em;
     }
-    >span {
+    span {
         font-size: 1.5em;
         font-weight: 700;
         margin-left: 1em;
@@ -59,7 +46,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 1em 1.5em 1em 1.5em;
+        margin: 1em 2em 1em 2em;
         @include ipad-only {
         flex-direction: column;
         }
@@ -117,7 +104,7 @@
     @include mobile-only {
         margin: 0;
     }
-    >h2 {
+    h2 {
         font-size: 1.5em;
         margin-left: 1em;
     }
@@ -127,6 +114,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    @include mobile-only {
+        margin: 1em 1em 1em 1em;
     }
-    
+    }
 }
