--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,7 +8,7 @@ $third-color: #99E2D0;
 /** Font color **/
 $primary-color-font: black;
 $secondary-color-font: #353535;
-$third-color-font: grey;
+$third-color-font: lightgrey;
 $accent-color-font: #048968;
 
 
