--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ ul li {
 }
 
 .like-icon {
-  color: grey;
+  color: lightgrey;
   cursor: pointer;
 }
 .like-icon:hover::before {
@@ -119,10 +119,16 @@ button:hover {
 
 .menu-card {
   margin: 2em 0em 2em 0em;
+  width: 100%;
+}
+@media screen and (max-width: 990px) {
+  .menu-card {
+    margin: 1em 0em 1em 0em;
+  }
 }
 .menu-card__title h3 {
   border-bottom: 3px solid #99E2D0;
-  width: 2em;
+  width: 2.5em;
   line-height: 1.9em;
   font-weight: 300;
   font-size: 1.1em;
@@ -130,7 +136,7 @@ button:hover {
 .menu-card__component {
   background-color: white;
   border-radius: 15px;
-  width: 30%;
+  width: 94%;
   margin: 1.2em 0em 1.2em 0em;
   box-shadow: 3px 3px 14px #d8d8d8;
   position: relative;
@@ -143,10 +149,17 @@ button:hover {
 }
 .menu-card__component--title {
   padding: 1em 1em 1em 1em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 65%;
 }
 .menu-card__component--title h4 {
   margin: 0;
   font-weight: 500;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .menu-card__component--title span {
   font-weight: 300;
@@ -156,6 +169,7 @@ button:hover {
 }
 .menu-card__component--price span {
   position: absolute;
+  font-weight: 500;
   right: 1em;
   bottom: 1em;
 }
@@ -214,7 +228,7 @@ button:hover {
 .header {
   width: 100%;
   background-color: white;
-  box-shadow: 0px 4px 4px #dadada;
+  box-shadow: 0px 2px 5px lightgrey;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,7 +236,7 @@ button:hover {
   padding: 1.5em 0em 1.2em 0em;
 }
 .header__return {
-  color: black;
+  color: #353535;
   position: absolute;
   left: 5%;
 }
@@ -239,6 +253,7 @@ button:hover {
   flex-wrap: wrap;
   line-height: 1.8em;
   font-size: 1.2em;
+  font-weight: 300;
   padding: 0;
 }
 @media screen and (max-width: 990px) {
@@ -341,7 +356,7 @@ button:hover {
   }
 }
 .detail-section__container > ul > i {
-  color: grey;
+  color: lightgrey;
   margin: 0em 1.7em 0em 0em;
 }
 .detail-section__container > ul > li {
@@ -353,7 +368,7 @@ button:hover {
   background-color: #f5edff;
 }
 .detail-section__container :hover i {
-  color: grey;
+  color: lightgrey;
 }
 
 #icon-number {
@@ -398,7 +413,7 @@ button:hover {
 .enchante__image {
   background-image: url("../../assets/restaurants/enchante.jpg");
   width: 100%;
-  height: 18em;
+  height: 19em;
   max-height: 100%;
   background-size: cover;
   background-position: center;
@@ -429,9 +444,26 @@ button:hover {
 .enchante__button {
   display: flex;
   justify-content: center;
+  margin: 2.8em 0em 3em 0em;
+}
+@media screen and (max-width: 680px) {
+  .enchante__button {
+    margin: 0.5em 0em 1.8em 0em;
+  }
 }
 .enchante__button button {
   cursor: pointer;
+}
+
+.menu-card-container {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 990px) {
+  .menu-card-container {
+    flex-direction: column;
+    margin-top: 1.5em;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
