--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,14 @@
 .header {
     width: 100%;
     background-color: white;
-    box-shadow: 0px 4px 4px #dadada;
+    box-shadow: 0px 2px 5px $third-color-font;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     padding: 1.5em 0em 1.2em 0em; 
     &__return {
-        color: black;
+        color: $secondary-color-font;
         position: absolute;
         left: 5%;
     }
