--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import "./utils/variables";
 @import "./utils/functions";
 @import "./utils/mixins";
+@import "./utils/animations";
+
 
 @import "./base/base";
 
