--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,44 +410,59 @@ button:hover {
   }
 }
 
-.enchante__image {
+#enchante-background {
   background-image: url("../../assets/restaurants/enchante.jpg");
+}
+
+#francaise-background {
+  background-image: url("../../assets/restaurants/francaise.jpg");
+}
+
+#gout-background {
+  background-image: url("../../assets/restaurants/gout.jpg");
+}
+
+#sens-background {
+  background-image: url("../../assets/restaurants/sens.jpg");
+}
+
+.restaurant-details__image {
   width: 100%;
   height: 19em;
   max-height: 100%;
   background-size: cover;
   background-position: center;
 }
-.enchante__menu {
+.restaurant-details__menu {
   background-color: #f6f6f6;
   padding: 2em 2em 1em 2em;
   border-radius: 20px 20px 0px 0px;
   margin-top: -2em;
 }
 @media screen and (max-width: 680px) {
-  .enchante__menu {
+  .restaurant-details__menu {
     padding: 2em 1.3em 2em 1.3em;
   }
 }
-.enchante__menu--title {
+.restaurant-details__menu--title {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.enchante__menu--title h2 {
+.restaurant-details__menu--title h2 {
   font-family: "Shrikhand";
   font-size: 1.7em;
 }
-.enchante__menu--title i {
+.restaurant-details__menu--title i {
   margin-right: 0.5em;
 }
-.enchante__button {
+.restaurant-details__button {
   display: flex;
   justify-content: center;
   margin: 1em 0em 3.5em 0em;
 }
 @media screen and (max-width: 680px) {
-  .enchante__button {
+  .restaurant-details__button {
     margin: 0.5em 0em 1.8em 0em;
   }
 }
