--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
     background-color: $background-dark;
     color: white;
     padding: 3em 1em 3em 3em;
-    >ul {
+    ul {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -15,17 +15,17 @@
             flex-direction: column;
             align-items: flex-start;
         }
-        >li:nth-child(1) {
+        li:nth-child(1) {
             font-family: "Shrikhand";
             font-size: 1.5em;
             margin: 0.6em 0em 0.6em 0em;
         }
-        >li:nth-child(2) {
+        li:nth-child(2) {
             i {
                 margin-right: 1em;
             }
         }
-        >li:nth-child(3) {
+        li:nth-child(3) {
             i {
                 margin-right: 0.7em;
             }
