--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,33 @@
 }
 
 /* menu card appear animation */
+.menu-card__component {
+  animation: appear 1s ease-in-out forwards;
+  opacity: 0;
+}
+.menu-card .menu-card__component:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.menu-card .menu-card__component:nth-child(3) {
+  animation-delay: 0.7s;
+}
+.menu-card .menu-card__component:nth-child(4) {
+  animation-delay: 1.2s;
+}
+.menu-card .menu-card__component:nth-child(5) {
+  animation-delay: 1.7s;
+}
+
+@keyframes appear {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0px);
+    opacity: 1;
+  }
+}
 /* menu card check animation */
 .menu-card__component:hover .card-price {
   padding-right: 4em;
