--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -18,8 +18,38 @@
 
 
 /* menu card appear animation */
+.menu-card {
+  &__component {
+    animation: appear 1s ease-in-out forwards;
+    opacity: 0;
+  }
+  .menu-card__component:nth-child(2) {
+  animation-delay: 0.2s;
+  }
 
+  .menu-card__component:nth-child(3) {
+    animation-delay: 0.7s;
+  }
 
+  .menu-card__component:nth-child(4) {
+    animation-delay: 1.2s;
+  }
+
+  .menu-card__component:nth-child(5) {
+    animation-delay: 1.7s;
+  }
+}
+
+@keyframes appear{
+  0%{
+      transform: translateY(30px);
+      opacity: 0;
+  }
+  100%{
+      transform: translate(0px);
+      opacity: 1;
+  }
+}
 
 
 /* menu card check animation */
