--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,59 @@
 /** Breakpoints **/
 /** Responsive mixins **/
 /* loader animation */
+.loader {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(246, 246, 246, 0.5);
+  top: 0;
+  left: 0;
+  position: fixed;
+  opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  animation: loader 0.3s ease 2s forwards;
+}
+.loader div {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  margin: 0em 0.5em 0em 0.5em;
+}
+.loader div:nth-child(1) {
+  background-color: #9356DC;
+  animation: jump 1s ease;
+}
+.loader div:nth-child(2) {
+  background-color: #FF79DA;
+  animation: jump 1s ease 0.25s;
+}
+.loader div:nth-child(3) {
+  background-color: #99E2D0;
+  animation: jump 1s ease 0.5s;
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(1em);
+  }
+  75% {
+    transform: translateY(-1em);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes loader {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 /* like animation */
 .like-icon {
   color: lightgrey;
@@ -259,7 +312,6 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
   padding: 1.5em 0em 1.2em 0em;
 }
 .header__return {
