--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,7 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
   padding: 1.5em 0em 1.2em 0em;
 }
 .header__return {
