--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     padding: 1.5em 0em 1.2em 0em; 
     &__return {
         color: $secondary-color-font;
