--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,39 +6,6 @@
 /** Breakpoints **/
 /** Responsive mixins **/
 /* loader animation */
-.loader {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(246, 246, 246, 0.5);
-  top: 0;
-  left: 0;
-  position: fixed;
-  opacity: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  animation: loader 0.3s ease 2s forwards;
-}
-.loader div {
-  width: 30px;
-  height: 30px;
-  border-radius: 50px;
-  margin: 0em 0.5em 0em 0.5em;
-}
-.loader div:nth-child(1) {
-  background-color: #9356DC;
-  animation: jump 1s ease;
-}
-.loader div:nth-child(2) {
-  background-color: #FF79DA;
-  animation: jump 1s ease 0.25s;
-}
-.loader div:nth-child(3) {
-  background-color: #99E2D0;
-  animation: jump 1s ease 0.5s;
-}
-
 @keyframes jump {
   0% {
     transform: translateY(0);
@@ -59,38 +26,7 @@
     visibility: hidden;
   }
 }
-/* like animation */
-.like-icon {
-  color: lightgrey;
-  cursor: pointer;
-}
-.like-icon:hover::before {
-  background: linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 900;
-  transition: 500ms ease-out;
-}
-
 /* menu card appear animation */
-.menu-card__component {
-  animation: appear 1s ease-in-out forwards;
-  opacity: 0;
-}
-.menu-card .menu-card__component:nth-child(2) {
-  animation-delay: 0.2s;
-}
-.menu-card .menu-card__component:nth-child(3) {
-  animation-delay: 0.7s;
-}
-.menu-card .menu-card__component:nth-child(4) {
-  animation-delay: 1.2s;
-}
-.menu-card .menu-card__component:nth-child(5) {
-  animation-delay: 1.7s;
-}
-
 @keyframes appear {
   0% {
     transform: translateY(30px);
@@ -102,18 +38,6 @@
   }
 }
 /* menu card check animation */
-.menu-card__component:hover .card-price {
-  padding-right: 4em;
-  transition: 0.5s ease;
-}
-
-.menu-card__component:hover .menu-card__component--check {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: slide 0.5s ease forwards;
-}
-
 @keyframes slide {
   0% {
     transform: translateX(0);
@@ -122,10 +46,6 @@
     transform: translateX(-40px);
   }
 }
-.fa-circle-check {
-  animation: rotate 0.6s ease-in-out;
-}
-
 @keyframes rotate {
   0% {
     transform: rotate(180deg);
@@ -163,6 +83,19 @@ button {
 button:hover {
   opacity: 80%;
   cursor: pointer;
+}
+
+.like-icon {
+  color: lightgrey;
+  cursor: pointer;
+}
+.like-icon:hover::before {
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 900;
+  transition: 500ms ease-out;
 }
 
 .restaurant-card {
@@ -273,6 +206,16 @@ button:hover {
   overflow: hidden;
   width: 65%;
 }
+@media screen and (max-width: 990px) {
+  .menu-card__component--title {
+    width: 55%;
+  }
+}
+@media screen and (max-width: 680px) {
+  .menu-card__component--title {
+    width: 65%;
+  }
+}
 .menu-card__component--title h4 {
   margin: 0;
   font-weight: 500;
@@ -303,6 +246,23 @@ button:hover {
   top: 0;
   right: -1.5em;
   display: none;
+}
+
+/** Component Animation **/
+.menu-card__component:hover .card-price {
+  padding-right: 4em;
+  transition: 0.5s ease;
+}
+
+.menu-card__component:hover .menu-card__component--check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: slide 0.5s ease forwards;
+}
+
+.fa-circle-check {
+  animation: rotate 0.6s ease-in-out;
 }
 
 .header {
@@ -352,6 +312,38 @@ button:hover {
 }
 .footer ul li:nth-child(3) i {
   margin-right: 0.7em;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(246, 246, 246, 0.5);
+  top: 0;
+  left: 0;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  animation: loader 0.3s ease 2s forwards;
+}
+.loader div {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  margin: 0em 0.5em 0em 0.5em;
+}
+.loader div:nth-child(1) {
+  background-color: #9356DC;
+  animation: jump 1s ease;
+}
+.loader div:nth-child(2) {
+  background-color: #FF79DA;
+  animation: jump 1s ease 0.25s;
+}
+.loader div:nth-child(3) {
+  background-color: #99E2D0;
+  animation: jump 1s ease 0.5s;
 }
 
 .location-section {
@@ -475,7 +467,7 @@ button:hover {
 }
 .restaurant h2 {
   font-size: 1.5em;
-  margin-left: 1em;
+  margin: 1em 0em 1.5em 1em;
 }
 .restaurant_container {
   margin: 1em 1.5em 1em 1.5em;
@@ -521,7 +513,7 @@ button:hover {
 }
 @media screen and (max-width: 680px) {
   .restaurant-details__menu {
-    padding: 2em 1.3em 2em 1.3em;
+    padding: 2.5em 1.5em 2em 1.5em;
   }
 }
 .restaurant-details__menu--title {
@@ -554,8 +546,25 @@ button:hover {
 @media screen and (max-width: 990px) {
   .menu-card-container {
     flex-direction: column;
-    margin-top: 1.5em;
+    margin-top: 1em;
   }
+}
+
+.menu-card__component {
+  animation: appear 1s ease-in-out forwards;
+  opacity: 0;
+}
+.menu-card .menu-card__component:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.menu-card .menu-card__component:nth-child(3) {
+  animation-delay: 0.7s;
+}
+.menu-card .menu-card__component:nth-child(4) {
+  animation-delay: 1.2s;
+}
+.menu-card .menu-card__component:nth-child(5) {
+  animation-delay: 1.7s;
 }
 
 /*# sourceMappingURL=style.css.map */
