--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -54,7 +54,7 @@
     h1 {
         font-size: 1.5em;
         @include mobile-only {
-            padding: 0em 2em 0em 2em;    
+            padding: 0em 1em 0em 1em;    
         }
     }
     span {
@@ -139,6 +139,9 @@
     h2 {
         font-size: 1.5em;
         margin: 1em 0em 1.5em 1em;
+        @include mobile-only {
+            margin: 1em 0em 0em 1em;
+        }
     }
     &_container {
     margin: 1em 1.5em 1em 1.5em;
