--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -37,6 +37,9 @@
     align-items: center;
     justify-content: center;
     color: $secondary-color-font;
+    h4 {
+        font-weight: 400;
+    }
     i {
         margin-right: 1.2em;
     }
@@ -69,7 +72,7 @@
     @include mobile-only {
         margin: 2.5em 0em 2.5em 0em;
     }
-    span {
+    h2 {
         font-size: 1.5em;
         font-weight: 700;
         margin-left: 1em;
@@ -98,12 +101,14 @@
             margin: 1em 0em 1em 0em;
             width: 90%;
             }
-            >i {
-                color: $third-color-font;
-                margin: 0em 1.7em 0em 0em;
-            }
-            >li {
+            li {
                 color: $primary-color-font;
+            }
+            li:nth-child(2) {
+                >i {
+                    color: $third-color-font;
+                    margin: 0em 1.7em 0em 0em;
+                }
             }
         }
         :hover {
@@ -111,13 +116,36 @@
             color: inherit;
             background-color: $hover-color;
         }
-        :hover i {
-            color: $third-color-font;
-        }
     }
 }
 
 #icon-number {
+    background-color: $primary-color;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9em;
+    margin: 0em 1.7em 0em -3.4em;
+}
+
+#icon-number2 {
+    background-color: $primary-color;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9em;
+    margin: 0em 1.7em 0em -3.4em;
+}
+
+#icon-number3 {
     background-color: $primary-color;
     width: 1.5em;
     height: 1.5em;
